WindowDataMap doesn't remove data objects for closed windows. b=495710 r=smichaud r=josh