widget/src/cocoa/nsCocoaWindow.mm
@@ -172,7 +172,7 @@ nsCocoaWindow::~nsCocoaWindow()
       // we want to unhook the delegate here because we don't want events
       // sent to it after this object has been destroyed
       [mWindow setDelegate:nil];
-      [mWindow autorelease];
+      [mWindow close];
       [mDelegate autorelease];
     }
   }
@@ -420,7 +420,6 @@ nsresult nsCocoaWindow::StandardCreate(nsIWidget *aParent,
 
     [mWindow setBackgroundColor:[NSColor whiteColor]];
     [mWindow setContentMinSize:NSMakeSize(60, 60)];
-    [mWindow setReleasedWhenClosed:NO];
 
     // setup our notification delegate. Note that setDelegate: does NOT retain.
     mDelegate = [[WindowDelegate alloc] initWithGeckoWindow:this];
